--- a/commit.html
+++ b/commit.html
@@ -2,7 +2,7 @@
 <html lang="ed">
     <head>
         <meta charset="UTF-8">
-        <meta name = "viewport" content="width=device-width, initial-scale">
+        <meta name = "viewport">
         <title>Document</title>
     </head>
     <body>
@@ -12,5 +12,6 @@
         <h1>hello world three</h1>
         <h1>hello world three33</h1>
         <h3> hahahahahahahahahaha</h3>
+
     </body>
 </html>
